[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/moons/pixil-frame-0 (3).png" type="Texture" id=1]
[ext_resource path="res://assets/moons/pixil-frame-0 (16).png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/pixil-frame-0 (3).png" type="Texture" id=3]
[ext_resource path="res://font.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/moons/pixil-frame-0 (9).png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/popupPressed.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/resume.png" type="Texture" id=7]
[ext_resource path="res://assets/moons/pixil-frame-0 (2).png" type="Texture" id=8]
[ext_resource path="res://assets/background.png" type="Texture" id=9]
[ext_resource path="res://assets/HUD/popup.png" type="Texture" id=10]
[ext_resource path="res://assets/HUD/crash.png" type="Texture" id=11]
[ext_resource path="res://assets/moons/moon1.png" type="Texture" id=12]
[ext_resource path="res://assets/HUD/reset.png" type="Texture" id=13]
[ext_resource path="res://assets/HUD/resetPressed.png" type="Texture" id=14]
[ext_resource path="res://Menu.gd" type="Script" id=15]
[ext_resource path="res://assets/HUD/menuPopup.png" type="Texture" id=16]
[ext_resource path="res://assets/HUD/mControls.png" type="Texture" id=17]
[ext_resource path="res://assets/HUD/menuPressed.png" type="Texture" id=18]
[ext_resource path="res://assets/HUD/menu.png" type="Texture" id=19]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://assets/HUD/resumePressed.png" type="Texture" id=21]
[ext_resource path="res://HUD.gd" type="Script" id=22]

[sub_resource type="Theme" id=30]

[sub_resource type="StyleBoxTexture" id=31]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 6 ) ],
"loop": false,
"name": "nextLevel",
"speed": 4.0
} ]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 20 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 27 ) ],
"loop": false,
"name": "static",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "press",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 20 )

[sub_resource type="Theme" id=26]

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 512, 512 )

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 100.0
content_margin_top = 110.0
bg_color = Color( 0.0470588, 0.0901961, 0.239216, 1 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=14]
size = 10
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=16]
size = 10
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=18]
size = 10
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=20]
size = 10
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 4 )

[sub_resource type="SegmentShape2D" id=22]
a = Vector2( 1022.15, 3.48065 )
b = Vector2( -0.316605, -0.330017 )

[sub_resource type="SegmentShape2D" id=23]
a = Vector2( -1.51471, 1.74912 )
b = Vector2( 1.62007, 592.496 )

[sub_resource type="SegmentShape2D" id=24]
b = Vector2( 2.84918, 596.142 )

[sub_resource type="Theme" id=25]

[node name="HUD" type="Node2D"]
script = ExtResource( 22 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 513.446, 300.193 )
scale = Vector2( 0.480596, 0.373737 )
texture = ExtResource( 9 )

[node name="ResetButton" type="TextureButton" parent="."]
margin_left = 905.359
margin_top = 11.3716
margin_right = 1015.36
margin_bottom = 46.3716
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = -216.0
margin_top = -257.0
margin_right = 259.0
margin_bottom = 227.0
theme = SubResource( 30 )
custom_styles/panel = SubResource( 31 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="PopupDialog"]
position = Vector2( 232.824, 256.109 )
frames = SubResource( 1 )
animation = "nextLevel"

[node name="NextLevel" type="TextureButton" parent="PopupDialog"]
margin_left = 68.7903
margin_top = 348.046
margin_right = 394.79
margin_bottom = 450.046
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="PopupDialog"]
margin_left = 126.0
margin_top = 311.0
margin_right = 339.0
margin_bottom = 337.0
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.239216, 0, 0.556863, 1 )
align = 1
placeholder_text = "Enter Moon Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="PopupDialog" parent="."]
margin_left = -483.411
margin_top = -355.366
margin_right = -23.4113
margin_bottom = 12.6344
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="TryAgain"]
position = Vector2( 221.742, 254.026 )
scale = Vector2( 0.978516, 0.99826 )
frames = SubResource( 9 )
animation = "static"

[node name="TryAgainButton" type="TextureButton" parent="TryAgain"]
margin_left = 64.8828
margin_top = 199.867
margin_right = 384.883
margin_bottom = 301.867
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attempts" type="RichTextLabel" parent="."]
margin_left = 20.9752
margin_top = 44.6684
margin_right = 202.975
margin_bottom = 77.6684
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 0.32549, 0.815686, 1, 1 )
text = "Attempts : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="PopupDialog" parent="."]
margin_left = 100.218
margin_top = 38.809
margin_right = 898.218
margin_bottom = 782.809
theme = SubResource( 26 )
custom_styles/panel = SubResource( 11 )
popup_exclusive = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Menu"]
anchor_right = 0.844
margin_left = 43.0
margin_top = 133.0
margin_right = 79.488
margin_bottom = 371.0
custom_styles/bg = SubResource( 12 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/ScrollContainer"]
margin_left = 100.0
margin_top = 110.0
margin_right = 1100.0
margin_bottom = 110.0
custom_constants/separation = 200

[node name="Level1" type="Control" parent="Menu/ScrollContainer/HBoxContainer"]

[node name="Sprite" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level1"]
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level1"]
position = Vector2( 0.946091, -3.78442 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level1"]
margin_left = -55.0
margin_top = -84.0
margin_right = 55.0
margin_bottom = -66.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.713726, 0.25098, 1, 1 )
custom_colors/font_color_shadow = Color( 0.262745, 0.913725, 1, 1 )
text = "LEVEL 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nametag" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level1"]
margin_left = -70.0
margin_top = 65.011
margin_right = 70.0
margin_bottom = 79.011
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.290196, 0.94902, 1, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Control" parent="Menu/ScrollContainer/HBoxContainer"]
margin_left = 200.0
margin_right = 200.0

[node name="Sprite" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level2"]
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level2"]
position = Vector2( 0.473053, -3.31134 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level2"]
margin_left = -55.0
margin_top = -83.4715
margin_right = 57.0
margin_bottom = -66.3573
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.713726, 0.25098, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.262745, 0.913725, 1, 1 )
text = "LEVEL 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nametag" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level2"]
margin_left = -70.0
margin_top = 65.0
margin_right = 70.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0.290196, 0.94902, 1, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Control" parent="Menu/ScrollContainer/HBoxContainer"]
margin_left = 400.0
margin_right = 400.0

[node name="Sprite" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level3"]
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level3"]
position = Vector2( 1.41913, -3.78436 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level3"]
margin_left = -55.5286
margin_top = -84.0
margin_right = 56.4714
margin_bottom = -66.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0.713726, 0.25098, 1, 1 )
custom_colors/font_color_shadow = Color( 0.262745, 0.913725, 1, 1 )
text = "LEVEL 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nametag" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level3"]
margin_left = -70.0
margin_top = 65.011
margin_right = 70.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 0.290196, 0.94902, 1, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="Control" parent="Menu/ScrollContainer/HBoxContainer"]
margin_left = 600.0
margin_right = 600.0

[node name="Sprite" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level4"]
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level4"]
position = Vector2( 0.946106, -3.78442 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level4"]
margin_left = -55.0
margin_top = -84.0
margin_right = 55.0
margin_bottom = -66.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.713726, 0.25098, 1, 1 )
custom_colors/font_color_shadow = Color( 0.262745, 0.913725, 1, 1 )
text = "LEVEL 4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nametag" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level4"]
margin_left = -70.0
margin_top = 65.011
margin_right = 70.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 0.290196, 0.94902, 1, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5" type="Control" parent="Menu/ScrollContainer/HBoxContainer"]
margin_left = 800.0
margin_right = 800.0

[node name="Sprite" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level5"]
position = Vector2( 3.05176e-05, 0 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Menu/ScrollContainer/HBoxContainer/Level5"]
position = Vector2( 0.946106, -3.3114 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level5"]
margin_left = -55.0
margin_top = -84.0
margin_right = 55.0
margin_bottom = -66.0
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0.713726, 0.25098, 1, 1 )
custom_colors/font_color_shadow = Color( 0.262745, 0.913725, 1, 1 )
text = "LEVEL 5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nametag" type="Label" parent="Menu/ScrollContainer/HBoxContainer/Level5"]
margin_left = -67.0357
margin_top = 65.011
margin_right = 72.9643
margin_bottom = 75.011
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 0.290196, 0.94902, 1, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Menu/ScrollContainer/HBoxContainer"]
margin_left = 1000.0
margin_right = 1000.0

[node name="resume" type="TextureButton" parent="Menu"]
margin_left = 550.207
margin_top = 439.448
margin_right = 756.207
margin_bottom = 516.448
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="Sprite" parent="Menu"]
position = Vector2( 200.531, 446.985 )
texture = ExtResource( 17 )

[node name="Walls" type="Node2D" parent="."]
position = Vector2( 121, 0 )

[node name="TopBoundary" type="StaticBody2D" parent="Walls"]
position = Vector2( -118.563, 1.91368 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopBoundary"]
position = Vector2( 0, -1.91368 )
shape = SubResource( 22 )

[node name="BottomBoundary" type="StaticBody2D" parent="Walls"]
position = Vector2( -121.891, 594.154 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomBoundary"]
position = Vector2( 0, -6.10352e-05 )
shape = SubResource( 22 )

[node name="LeftBoundary" type="StaticBody2D" parent="Walls"]
position = Vector2( -118.563, -0.891075 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftBoundary"]
position = Vector2( 0, 0.891075 )
shape = SubResource( 23 )

[node name="RightBoundary" type="StaticBody2D" parent="Walls"]
position = Vector2( 904.11, 2.80476 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightBoundary"]
position = Vector2( -0.00012207, -3.69583 )
shape = SubResource( 24 )

[node name="menuButton" type="TextureButton" parent="."]
margin_left = 904.986
margin_top = 58.6269
margin_right = 1014.99
margin_bottom = 93.6269
theme = SubResource( 25 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="PopupDialog" to="." method="_on_PopupDialog_about_to_show"]
[connection signal="about_to_show" from="TryAgain" to="." method="_on_TryAgain_about_to_show"]
[connection signal="pressed" from="Menu/resume" to="Menu" method="_on_resume_pressed"]
[connection signal="pressed" from="menuButton" to="Menu" method="_on_menuButton_pressed"]
